---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"PartitionsCycle.third\", style=dashed ]\n    2 [ label = \"PartitionsCycle.first\", style=dashed ]\n    3 [ label = \"PartitionsCycle.second\", style=dashed ]\n    4 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    5 [ label = \"partitionsCycle#C\", shape=box, color=dodgerblue, style=dashed ]\n    6 [ label = \"FedEntity#B\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    7 [ label = \"second#B\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    9 [ label = \"first#A\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"third#A\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"*PartitionsCycle.id\", style=dashed ]\n    12 [ label = \"id#C\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label=\"\", style=dashed]\n    0 -> 4 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "PartitionsCycle.third", steiner=0 ]
    2 [ label = "PartitionsCycle.first", steiner=0 ]
    3 [ label = "PartitionsCycle.second", steiner=0 ]
    4 [ label = "Root#C", steiner=0 ]
    5 [ label = "partitionsCycle#C", steiner=0 ]
    6 [ label = "FedEntity#B", steiner=0 ]
    7 [ label = "second#B", steiner=0 ]
    8 [ label = "FedEntity#A", steiner=0 ]
    9 [ label = "first#A", steiner=0 ]
    10 [ label = "third#A", steiner=0 ]
    11 [ label = "*PartitionsCycle.id", steiner=0 ]
    12 [ label = "id#C", steiner=0 ]
    13 [ label="", style=dashed]
    0 -> 4 [ cost=1, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    5 -> 6 [ cost=1, steiner=0]
    6 -> 7 [ cost=0, steiner=0]
    7 -> 3 [ cost=0, steiner=0]
    5 -> 8 [ cost=1, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 2 [ cost=0, steiner=0]
    8 -> 10 [ cost=0, steiner=0]
    10 -> 1 [ cost=0, steiner=0]
    5 -> 12 [ cost=0, steiner=0]
    12 -> 11 [ cost=0, steiner=0]
    13 -> 0 [ cost=0, steiner=0]
}
